--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
+    "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^1.6.1",
     "postcss-loader": "^6.1.0",
     "postcss-preset-env": "^6.7.0",
