--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
@@ -18,6 +19,7 @@
     "mini-css-extract-plugin": "^1.6.1",
     "postcss-loader": "^6.1.0",
     "postcss-preset-env": "^6.7.0",
+    "react-refresh": "^0.10.0",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "webpack": "^5.40.0",
